[FEAT] update validation POST, and fix GET of comments